Documentação Swagger e README
