# app/Http/Controllers/API/AuthController.php
@@ -12,6 +12,36 @@ use Laravel\Sanctum\PersonalAccessToken;
 class AuthController extends Controller
 {
     //
+    /**
+     * @OA\Post(
+     *     path="/auth/register",
+     *     tags={"Authentication"},
+     *     summary="Registrar novo usuário",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"name","email", "password"},
+     *             @OA\Property(property="name", type="string", example="Eluki Júnior"),
+     *             @OA\Property(property="email", type="string", example="eluckimossi@gmail.com"),
+     *             @OA\Property(property="password", type="string", example="12345678"),
+     *             @OA\Property(property="password_confirmation", type="string", example="12345678")
+     *
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Usuário registrado com sucesso",
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Usuário já registrado"
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Erro de validação",
+     *     )
+     * )
+     */
     function register(Request $request)
     {
         $validated = $request->validate([
@@ -32,33 +62,60 @@ class AuthController extends Controller
 
         return response()->json(['ok' => true, 'user' => $user, 'token' => $token]);
     }
+    /**
+     * @OA\Post(
+     *     path="/auth/login",
+     *     tags={"Authentication"},
+     *     summary="Iniciar sessão",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"email", "password"},
+     *             @OA\Property(property="email", type="string", example="eluckimossi@gmail.com"),
+     *             @OA\Property(property="password", type="string", example="12345678")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Login realizado com sucesso",
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Credenciais inválidas"
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Erro de validação"
+     *     )
+     * )
+     */
     function login(Request $request)
     {
-
         $validated = $request->validate([
             'email' => 'required|string|email:rfc,dns',
             'password' => 'required|min:8',
         ]);
 
-        if(Auth::attempt($validated)){
+        if (Auth::attempt($validated)) {
             $user = User::where('email', $validated['email'])->first();
-           $token = $user->createToken('api-token', ['post:read', 'post:create'])->plainTextToken;
+            $token = $user->createToken('api-token', ['post:read', 'post:create'])->plainTextToken;
 
-            return response()->json(['ok' => true, 'token' => $token]);
+            return response()->json(['ok' => true, 'token' => $token], 200);
         }
-        return response()->json(['ok' => false, 'mensagem'=> 'Credencias inválidas'], 401);
+
+        return response()->json(['ok' => false, 'mensagem' => 'Credenciais inválidas'], 401);
     }
     function logout(Request $request)
     {
-       $token = $request->bearerToken();
-       if(!$token){
-              return response()->json(['ok' => false, 'mensagem' => 'Token não fornecido'], 401);
-       }
-       $access_token = PersonalAccessToken::findToken($token);
-       if(!$access_token){
-              return response()->json(['ok' => false, 'mensagem' => 'Token fornecido é inválido'], 401);
-       }
-         $access_token->delete();
-         return response()->json(['ok' => true, 'mensagem' => 'Logout realizado com sucesso']);
+        $token = $request->bearerToken();
+        if (!$token) {
+            return response()->json(['ok' => false, 'mensagem' => 'Token não fornecido'], 401);
+        }
+        $access_token = PersonalAccessToken::findToken($token);
+        if (!$access_token) {
+            return response()->json(['ok' => false, 'mensagem' => 'Token fornecido é inválido'], 401);
+        }
+        $access_token->delete();
+        return response()->json(['ok' => true, 'mensagem' => 'Logout realizado com sucesso']);
     }
 }
